--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^17.0.0",
+    "@react-native-firebase/messaging": "^17.0.0",
     "react": "18.2.0",
     "react-native": "0.71.2"
   },
